ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: the transcoder's growth callback; may move the buffer. */
typedef int32_t (*ak_grow_fn)(void *sink, int32_t want, uint8_t * *dst, int32_t *cap);
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Decision 11: one message position's configuration; all zero = its unknowns are discarded. */
struct ak_unk_opts {
  struct ak_unk_buf buf;
  ak_grow_fn grow;
};
typedef struct ak_unk_opts ak_unk_opts;
#define AK_TOKEN_ROOT ((int64_t)-1)  /* a token naming the root object itself */
/* ---- section 3: the lifecycle (plan.lifecycle, R-G7) ----------------------------
 * Every binding rendered from this plan calls `ak_init` before its first codec or RPC
 * call and treats AK_OK and AK_ALREADY_INITIALIZED as success. A core built with `init-guard`
 * refuses every entry point with AK_ERR_UNINITIALIZED until it has. The prototype
 * is among the fixed entry points below. */

/* Encode group for `TaskOptionsOptionsEntry`. */
struct ak_efix_TaskOptionsOptionsEntry {
  struct ak_str key;
  struct ak_str value;
  uint32_t presence;
};
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Duration`. */
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `ResultRaw`. */
struct ak_efix_ResultRaw {
  struct ak_str session_id;
  struct ak_str name;
  struct ak_str owner_task_id;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp completed_at;
  struct ak_str result_id;
  int64_t size;
  struct ak_str created_by;
  struct ak_str opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
#define AK_EFIX_RESULTRAW_PRESENT_CREATED_AT (1u << 0)
#define AK_EFIX_RESULTRAW_PRESENT_COMPLETED_AT (1u << 1)
/* Decode group for `ResultRaw`. */
struct ak_dfix_ResultRaw {
  struct ak_span session_id;
  struct ak_span name;
  struct ak_span owner_task_id;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp completed_at;
  struct ak_span result_id;
  int64_t size;
  struct ak_span created_by;
  struct ak_span opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
#define AK_DFIX_RESULTRAW_PRESENT_CREATED_AT (1u << 0)
#define AK_DFIX_RESULTRAW_PRESENT_COMPLETED_AT (1u << 1)
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
#define AK_EFIX_TASKOPTIONS_PRESENT_MAX_DURATION (1u << 0)
/* Decode group for `TaskOptions`. */
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  uint32_t presence;
};
#define AK_DFIX_TASKOPTIONS_PRESENT_MAX_DURATION (1u << 0)
/* Encode group for `TaskOutput`. */
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
/* Decode group for `TaskOutput`. */
struct ak_dfix_TaskOutput {
  uint8_t success;
  struct ak_span error;
  uint32_t presence;
};
/* Encode group for `TaskDetailed`. */
struct ak_efix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_efix_TaskOptions options;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp submitted_at;
  struct ak_efix_Timestamp started_at;
  struct ak_efix_Timestamp ended_at;
  struct ak_efix_Timestamp pod_ttl;
  struct ak_efix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_efix_Timestamp received_at;
  struct ak_efix_Timestamp acquired_at;
  struct ak_efix_Duration creation_to_end_duration;
  struct ak_efix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_efix_Duration received_to_end_duration;
  struct ak_efix_Timestamp processed_at;
  struct ak_efix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  uint32_t presence;
};
#define AK_EFIX_TASKDETAILED_PRESENT_OPTIONS (1u << 0)
#define AK_EFIX_TASKDETAILED_PRESENT_CREATED_AT (1u << 1)
#define AK_EFIX_TASKDETAILED_PRESENT_SUBMITTED_AT (1u << 2)
#define AK_EFIX_TASKDETAILED_PRESENT_STARTED_AT (1u << 3)
#define AK_EFIX_TASKDETAILED_PRESENT_ENDED_AT (1u << 4)
#define AK_EFIX_TASKDETAILED_PRESENT_POD_TTL (1u << 5)
#define AK_EFIX_TASKDETAILED_PRESENT_OUTPUT (1u << 6)
#define AK_EFIX_TASKDETAILED_PRESENT_RECEIVED_AT (1u << 7)
#define AK_EFIX_TASKDETAILED_PRESENT_ACQUIRED_AT (1u << 8)
#define AK_EFIX_TASKDETAILED_PRESENT_CREATION_TO_END_DURATION (1u << 9)
#define AK_EFIX_TASKDETAILED_PRESENT_PROCESSING_TO_END_DURATION (1u << 10)
#define AK_EFIX_TASKDETAILED_PRESENT_RECEIVED_TO_END_DURATION (1u << 11)
#define AK_EFIX_TASKDETAILED_PRESENT_PROCESSED_AT (1u << 12)
#define AK_EFIX_TASKDETAILED_PRESENT_FETCHED_AT (1u << 13)